# AthleteDT

./: .gitignore  CMakeLists.txt  README.md  main.cpp  output.webm  output_01-04-2024_00-20-21.avi  progress.md
detection_methods/: CMakeLists.txt  PersonDetection.h  PersonSegmentation.cpp  PersonSegmentation.h  PersonTracking.cpp  PersonTracking.h
utils/: CMakeLists.txt  Utils.cpp  Utils.h
